Setting up the Project Structure

--- a/public/overview.html
+++ b/public/overview.html
@@ -6,8 +6,7 @@
 
     <link
       href="https://fonts.googleapis.com/css?family=Lato:300,300i,700"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
@@ -27,8 +26,7 @@
           <input
             type="text"
             placeholder="Search tours"
-            class="nav__search-input"
-          />
+            class="nav__search-input" />
         </form>
       </nav>
       <div class="header__logo">
@@ -56,8 +54,7 @@
               <img
                 src="img/tour-1-cover.jpg"
                 alt="Tour 1"
-                class="card__picture-img"
-              />
+                class="card__picture-img" />
             </div>
 
             <h3 class="heading-tertirary">
@@ -116,8 +113,7 @@
               <img
                 src="img/tour-2-cover.jpg"
                 alt="Tour 1"
-                class="card__picture-img"
-              />
+                class="card__picture-img" />
             </div>
 
             <h3 class="heading-tertirary">
@@ -176,8 +172,7 @@
               <img
                 src="img/tour-3-cover.jpg"
                 alt="Tour 1"
-                class="card__picture-img"
-              />
+                class="card__picture-img" />
             </div>
 
             <h3 class="heading-tertirary">
@@ -236,8 +231,7 @@
               <img
                 src="img/tour-4-cover.jpg"
                 alt="Tour 1"
-                class="card__picture-img"
-              />
+                class="card__picture-img" />
             </div>
 
             <h3 class="heading-tertirary">
@@ -296,8 +290,7 @@
               <img
                 src="img/tour-5-cover.jpg"
                 alt="Tour 1"
-                class="card__picture-img"
-              />
+                class="card__picture-img" />
             </div>
 
             <h3 class="heading-tertirary">
@@ -356,8 +349,7 @@
               <img
                 src="img/tour-6-cover.jpg"
                 alt="Tour 1"
-                class="card__picture-img"
-              />
+                class="card__picture-img" />
             </div>
 
             <h3 class="heading-tertirary">
